--- a/interface/.env.development
+++ b/interface/.env.development
@@ -1,4 +1,5 @@
 # Change the IP address to that of your ESP device to enable local development of the UI.
 # Remember to also enable CORS in platformio.ini before uploading the code to the device.
 REACT_APP_ENDPOINT_ROOT=http://10.80.0.147/rest/
+REACT_APP_ENDPOINT_WS=http://10.80.0.147/ws
 
