--- a/interface/package.json
+++ b/interface/package.json
@@ -12,7 +12,7 @@
     "@types/react-material-ui-form-validator": "^2.0.5",
     "@types/react-router": "^5.1.3",
     "@types/react-router-dom": "^5.1.3",
-    "@types/socket.io-client": "^1.4.32",
+    "@types/websocket": "^1.0.0",
     "compression-webpack-plugin": "^3.0.1",
     "jwt-decode": "^2.2.0",
     "mime-types": "^2.1.25",
@@ -25,8 +25,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "socket.io": "^2.3.0",
     "typescript": "^3.7.5",
+    "websocket": "^1.0.31",
     "zlib": "^1.0.5"
   },
   "scripts": {
