--- a/data/config/wifiSettings.json
+++ b/data/config/wifiSettings.json
@@ -1,6 +1,6 @@
 {
-  "ssid": "",
-  "password": "password",
+  "ssid": "RoboTrain",
+  "password": "Robotrain!987.",
   "hostname": "esp8266-react",
   "static_ip_config": false
 }
